jdk17 support
fixes #3899

---------

Signed-off-by: Gino Augustine <ginoaugustine@gmail.com>