@@ -253,10 +253,15 @@ Portions Copyright (c) 2018, 2020, Chris Fraire <cfraire@me.com>.
                     <argLine>
                         @{surefireArgLine}
                         -Djna.nosys=true
-                        --illegal-access=permit
                         --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
-                        --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
                         --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-exports jdk.unsupported/sun.misc=ALL-UNNAMED
+                        --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+                        --add-opens jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens java.base/java.io=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
